feat(adapter): 添加火山方舟适配器工具调用功能
- 集成 Jackson JSON 处理库用于工具参数序列化
- 添加 BotToolRegistry 和 BotToolExecutor 依赖注入
- 实现动态工具注册和执行机制
- 扩展 getGeneration 方法支持工具调用响应处理
- 添加 buildJsonSchema 方法构建工具参数的 JSON Schema
- 增加工具调用日志记录和调试信息
- 更新 API 超时时间从 30 秒到 50 秒
- 重构代码结构以支持工具函数的动态扩展